--- a/src/main/resources/templates/item_create.html
+++ b/src/main/resources/templates/item_create.html
@@ -106,7 +106,7 @@
             //upload ajax
             //파일업로드를 위해 contentType 속성을 반드시 false로 지정한다 -> multipart/form-data 타입을 사용하기위해
             $.ajax({
-                url: '/create',
+                url: '/upload',
                 type: 'POST',
                 data: formData,
                 processData: false, //processData : false로 선언 시 formData를 string으로 변환하지 않음
