--- a/src/main/resources/templates/item_create.html
+++ b/src/main/resources/templates/item_create.html
@@ -82,7 +82,7 @@
 
     <footer>
         <div class="container">
-            <a href="index.html">2019 당근 마켓</a>
+            <a href="board.html">2019 당근 마켓</a>
             <h6>Copyright © Danggeun Market Inc. All rights reserved.</h6>
         </div>
     </footer>
@@ -97,7 +97,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 
     <script>
-        $('.uploadBtn').click(function( ) {
+        $('#uploadBtn').click(function( ) {
 
             var uploadForm = $('#upload_form')[0]; //$(...) 하면 객체 하나가 리턴
             var formData = new FormData(uploadForm); //FormData에는 객체가 들어가지 못함. so객체에서 인덱스로 뽑아옴.
