--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -10,18 +10,18 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <nav class="navbar nav-global fixed-top navbar-expand-sm">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img class="img-brand" alt="당근마켓" width="132" src="https://d1unjqcospf8gs.cloudfront.net/assets/home/base/header/logo-basic-00b7e471b721ce9db8b0758c05a84684413c8aef1ad54caa0f3fcbe7328c947f.svg">
-            </a>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="item_create.html"><i class="material-icons ic-create">create</i></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<!--    <nav class="navbar nav-global fixed-top navbar-expand-sm">-->
+<!--        <div class="container">-->
+<!--            <a class="navbar-brand" href="#">-->
+<!--                <img class="img-brand" alt="당근마켓" width="132" src="https://d1unjqcospf8gs.cloudfront.net/assets/home/base/header/logo-basic-00b7e471b721ce9db8b0758c05a84684413c8aef1ad54caa0f3fcbe7328c947f.svg">-->
+<!--            </a>-->
+<!--            <ul class="navbar-nav ml-auto">-->
+<!--                <li class="nav-item">-->
+<!--                    <a href="item_create.html"><i class="material-icons ic-create">create</i></a>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--    </nav>-->
 
 <div class="container container-main-index">
     <h5 class="container-headline">중고 거래 제품</h5>
