--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>당근마켓 - 우리 동네 중고거래</title>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css" integrity="sha256-G3IAYJYIQvZgPksNQDbjvxd/Ca1SfCDFwu2s2lt0oGo=" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+<!--    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css" integrity="sha256-G3IAYJYIQvZgPksNQDbjvxd/Ca1SfCDFwu2s2lt0oGo=" crossorigin="anonymous" />-->
+<!--    <link rel="stylesheet" type="text/css" href="css/style.css">-->
 </head>
 <body>
 <!--    <nav class="navbar nav-global fixed-top navbar-expand-sm">-->
@@ -26,13 +27,13 @@
 <div class="container container-main-index">
     <h5 class="container-headline">중고 거래 제품</h5>
 
-    <div class="categories-group">
-        <a href="categorized_index.html" class="btn btn-category">차량</a>
-        <a href="#" class="btn btn-category">인기매물</a>
-        <a href="#" class="btn btn-category">가구/인테리어</a>
-        <a href="#" class="btn btn-category">유아동/유아도서</a>
-        <a href="#" class="btn btn-category">생활/가공식품</a>
-    </div>
+<!--    <div class="categories-group">-->
+<!--        <a href="categorized_index.html" class="btn btn-category">차량</a>-->
+<!--        <a href="#" class="btn btn-category">인기매물</a>-->
+<!--        <a href="#" class="btn btn-category">가구/인테리어</a>-->
+<!--        <a href="#" class="btn btn-category">유아동/유아도서</a>-->
+<!--        <a href="#" class="btn btn-category">생활/가공식품</a>-->
+<!--    </div>-->
 
     <ul class="list-products row">
         <li class="list-products-item col-12 col-md-4 col-lg-3">
@@ -211,11 +212,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/bootstrap-slider.js" integrity="sha256-59/apVFrosMLFX2dHZLGvb3nPpu7e0Yx1rsDr1dTRrk=" crossorigin="anonymous"></script>
 <script>
     // With JQuery
-    $("#carYeara").slider({ min: 0, max: 10, value: 0, focus: true });
-    $("#sliderCarModelYear").slider({ min: 0, max: 10, value: [0, 10], focus: true });
-
-    $("#carDistancea").slider({ min: 0, max: 10, value: 0, focus: true });
-    $("#sliderCarMileage").slider({ min: 0, max: 10, value: [0, 10], focus: true });
+    // $("#carYeara").slider({ min: 0, max: 10, value: 0, focus: true });
+    // $("#sliderCarModelYear").slider({ min: 0, max: 10, value: [0, 10], focus: true });
+    //
+    // $("#carDistancea").slider({ min: 0, max: 10, value: 0, focus: true });
+    // $("#sliderCarMileage").slider({ min: 0, max: 10, value: [0, 10], focus: true });
 </script>
 </body>
 </html>
