--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,9 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/basic.html}">
+<head layout:fragment="head">
+    <title>홈 화면</title>
+</head>
 
 <div layout:fragment="content">
-    처음
+    처음 홈
 </div>
 
 <script layout:fragment="script" th:inline="javascript">
