--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -10,6 +10,7 @@
   <style>
     .form-container {
       max-width: 560px;
+      padding-left: 100px;
     }
     .field-error {
       border-color: #dc3545;
@@ -26,17 +27,19 @@
     <!--intelliJ에서 thymelaf를 인식하는게 완벽하지는 않아서 이렇게 인식을 잘못하는 경우가 있다.
       @ModelAttribute에 (name="loginForm") 명시하지 않을 경우
       실행에 문제가 없다면 넘어가도 된다.-->
-    <form action="item.html" th:action th:object="${loginForm}" method="post">
+    <form action="" th:action th:object="${loginForm}" method="post">
       <div th:if="${#fields.hasGlobalErrors()}">
         <p class="field-error" th:each="err : ${#fields.globalErrors()}"
            th:text="${err}">전체 오류 메시지</p>
       </div>
+
       <div>
         <label for="loginId">로그인 ID</label>
-        <input type="text" id="loginId" th:field="*{loginId}" class="formcontrol"
+        <input type="text" id="loginId" th:field="*{loginId}" class="form-control"
                th:errorclass="field-error">
         <div class="field-error" th:errors="*{loginId}" />
       </div>
+
       <div>
         <label for="pwd">비밀번호</label>
         <input type="password" id="pwd" th:field="*{pwd}"
@@ -47,7 +50,10 @@
       <hr class="my-4">
       <div class="row">
         <div class="col">
-          <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
+          <button class="w-100 btn btn-secondary btn-lg"
+                  onclick="location.href='/member/signupForm'"
+                  th:onclick="|location.href='@{/members/signup}'|"
+                  type="button">회원가입</button>
         </div>
         <div class="col">
           <button class="w-100 btn btn-secondary btn-lg"
@@ -55,8 +61,18 @@
                   th:onclick="|location.href='@{/}'|"
                   type="button">취소</button>
         </div>
+        <div class="col">
+          <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
+        </div>
       </div>
     </form>
   </div> <!-- /form-container -->
 </div>
+
+<script layout:fragment="script" th:inline="javascript">
+  console.log("script.....................");
+  fetch(url, options)
+          .then((response) => console.log("response:", response))
+          .catch((error) => console.log("error:", error));
+</script>
 </html>
