--- a/src/main/resources/templates/member/signupForm.html
+++ b/src/main/resources/templates/member/signupForm.html
@@ -47,8 +47,8 @@
                 <div class="field-error" th:errors="*{pwd}" />
             </div>
             <div>
-                <label for="memPwdConfirm">비밀번호 재확인</label>
-                <input type="password" id="memPwdConfirm" th:field="*{pwdConfirm}"
+                <label for="pwdConfirm">비밀번호 재확인</label>
+                <input type="password" id="pwdConfirm" th:field="*{pwdConfirm}"
                        class="formcontrol"
                        th:errorclass="field-error">
                 <div class="field-error" th:errors="*{pwdConfirm}" />
@@ -74,14 +74,21 @@
             <hr class="my-4">
             <div class="row">
                 <div class="col">
-                    <button class="w-100 btn btn-primary btn-lg"
-                            type="submit"> 회원 가입 </button>
-                </div>
-                <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg"
                             onclick="location.href='/'"
                             th:onclick="|location.href='@{/}'|"
                             type="button">취소</button>
+                </div>
+                <div class="col">
+                    <button class="w-100 btn btn-secondary btn-lg"
+                            onclick="location.href='/member/loginForm'"
+                            th:onclick="|location.href='@{/login}'|"
+                            type="button">로그인</button>
+                </div>
+                <div class="col">
+                    <button class="w-100 btn btn-primary btn-lg"
+                            id=""
+                            type="button"> 회원 가입 </button>
                 </div>
             </div>
         </form>
