--- a/src/main/resources/templates/member/signupForm.html
+++ b/src/main/resources/templates/member/signupForm.html
@@ -20,87 +20,84 @@
 </head>
 
 <div layout:fragment="content">
-    <div class="form-container">
-        <div class="py-5 text-center">
-            <h2>회원 가입</h2>
-        </div>
-        <h4 class="mb-3">회원 정보 입력</h4>
-        <form action="" th:action th:object="${memberSaveForm}" method="post">
+<div class="form-container">
+    <div class="py-5 text-center">
+        <h2>회원 가입</h2>
+    </div>
+    <h4 class="mb-3">회원 정보 입력</h4>
+    <form action="" th:action th:object="${signupForm}" method="post">
 <!--
-            <div th:if="${#fields.hasGlobalErrors()}">
-                <p class="field-error" th:each="err : ${#fields.globalErrors()}"
-                   th:text="${err}">전체 오류 메시지</p>
-            </div>
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+               th:text="${err}">전체 오류 메시지</p>
+        </div>
 -->
-            <div>
-                <label for="memId">아이디</label>
-                <input type="text" id="memId" th:field="*{memId}"
-                       class="formcontrol"
-                       th:errorclass="field-error">
-                <div class="field-error" th:errors="*{memId}" />
-            </div>
-            <div>
-                <label for="memPwd">비밀번호</label>
-                <input type="password" id="memPwd" th:field="*{pwd}"
-                       class="formcontrol"
-                       th:errorclass="field-error">
-                <div class="field-error" th:errors="*{pwd}" />
-            </div>
-            <div>
-                <label for="pwdConfirm">비밀번호 재확인</label>
-                <input type="password" id="pwdConfirm" th:field="*{pwdConfirm}"
-                       class="formcontrol"
-                       th:errorclass="field-error">
-                <div class="field-error" th:errors="*{pwdConfirm}" />
-            </div>
-            <div>
-                <label for="nickname">닉네임</label>
-                <input type="text" id="nickname" th:field="*{nickname}"
-                       class="formcontrol"
-                       th:errorclass="field-error">
-                <div class="field-error" th:errors="*{nickname}" />
-            </div>
+        <div>
+            <label for="memId">아이디</label>
+            <input type="text" id="memId" th:field="*{memId}"
+                   class="formcontrol"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{memId}" />
+        </div>
+        <div>
+            <label for="memPwd">비밀번호</label>
+            <input type="password" id="memPwd" th:field="*{pwd}"
+                   class="formcontrol"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{pwd}" />
+        </div>
+        <div>
+            <label for="pwdConfirm">비밀번호 재확인</label>
+            <input type="password" id="pwdConfirm" th:field="*{pwdConfirm}"
+                   class="formcontrol"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{pwdConfirm}" />
+        </div>
+        <div>
+            <label for="nickname">닉네임</label>
+            <input type="text" id="nickname" th:field="*{nickname}"
+                   class="formcontrol"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{nickname}" />
+        </div>
 
-            <div>
-                <label for="loc">내 동네</label>
-                <select id="loc" th:field="*{loc}" th:onchange="locTest()">
-                    <option th:each="locValue:${T(com.exercise.carrotproject.domain.enumList.Loc).values()}"
-                            th:value="${locValue}"
-                            th:text="${locValue.locName}"></option>
-                </select>
-                <div class="field-error" th:errors="*{loc}" />
-            </div>
+        <div>
+            <label for="loc">내 동네</label>
+            <select id="loc" th:field="*{loc}" th:onchange="locTest()">
+                <option th:each="locValue:${T(com.exercise.carrotproject.domain.enumList.Loc).values()}"
+                        th:value="${locValue}"
+                        th:text="${locValue.locName}"></option>
+            </select>
+            <div class="field-error" th:errors="*{loc}" />
+        </div>
 
-            <hr class="my-4">
-            <div class="row">
-                <div class="col">
-                    <button class="w-100 btn btn-secondary btn-lg"
-                            onclick="location.href='/'"
-                            th:onclick="|location.href='@{/}'|"
-                            type="button">취소</button>
-                </div>
-                <div class="col">
-                    <button class="w-100 btn btn-secondary btn-lg"
-                            onclick="location.href='/member/loginForm'"
-                            th:onclick="|location.href='@{/login}'|"
-                            type="button">로그인</button>
-                </div>
-                <div class="col">
-                    <button class="w-100 btn btn-primary btn-lg"
-                            id=""
-                            type="button"> 회원 가입 </button>
-                </div>
+        <hr class="my-4">
+        <div class="row">
+            <div class="col">
+                <button class="w-100 btn btn-secondary btn-lg"
+                        onclick="location.href='/'"
+                        th:onclick="|location.href='@{/}'|"
+                        type="button">취소</button>
             </div>
-        </form>
-    </div> <!-- /container -->
+            <div class="col">
+                <button class="w-100 btn btn-secondary btn-lg"
+                        onclick="location.href='/member/loginForm'"
+                        th:onclick="|location.href='@{/login}'|"
+                        type="button">로그인</button>
+            </div>
+            <div class="col">
+                <button class="w-100 btn btn-primary btn-lg"
+                        id=""
+                        type="button"> 회원 가입 </button>
+            </div>
+        </div>
+    </form>
+</div> <!-- /form-container -->
 </div>
 
-<script layout:fragment="script" th:inline="javascript">
-    function locTest() {
-        var loc= document.getElementById("loc");
+<div layout:fragment="script" th:inline="javascript">
+<!--  <script type="text/javascript" src="http://map.vworld.kr/js/vworldMapInit.js.do?version=2.0&apiKey=[593AE8E8-EC6D-350F-8E69-BC6C4E15A535]"></script>-->
+<script th:inline="javascript">
 
-        // select element에서 선택된 option의 value
-        var locVal = loc.options[loc.selectedIndex].value;
-        console.log('locVal: '+ locVal);
-    }
 </script>
+</div>
