--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -53,6 +53,7 @@
             </div>
         </header>
         <!-- Section-->
+        <a th:href="@{/uploadPage}">글쓰기</a>
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -76,42 +77,90 @@
 <!--                            </div>-->
                         </div>
                     </div>
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">Special Item</h5>
-                                    <!-- Product reviews-->
-                                    <div class="d-flex justify-content-center small text-warning mb-2">
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                        <div class="bi-star-fill"></div>
-                                    </div>
-                                    <!-- Product price-->
-                                    <span class="text-muted text-decoration-line-through">$20.00</span>
-                                    $18.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
+<!--                    <div class="col mb-5">-->
+<!--                        <div class="card h-100">-->
+<!--                            &lt;!&ndash; Sale badge&ndash;&gt;-->
+<!--                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>-->
+<!--                            &lt;!&ndash; Product image&ndash;&gt;-->
+<!--                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />-->
+<!--                            &lt;!&ndash; Product details&ndash;&gt;-->
+<!--                            <div class="card-body p-4">-->
+<!--                                <div class="text-center">-->
+<!--                                    &lt;!&ndash; Product name&ndash;&gt;-->
+<!--                                    <h5 class="fw-bolder">Special Item</h5>-->
+<!--                                    &lt;!&ndash; Product reviews&ndash;&gt;-->
+<!--                                    <div class="d-flex justify-content-center small text-warning mb-2">-->
+<!--                                        <div class="bi-star-fill"></div>-->
+<!--                                        <div class="bi-star-fill"></div>-->
+<!--                                        <div class="bi-star-fill"></div>-->
+<!--                                        <div class="bi-star-fill"></div>-->
+<!--                                        <div class="bi-star-fill"></div>-->
+<!--                                    </div>-->
+<!--                                    &lt;!&ndash; Product price&ndash;&gt;-->
+<!--                                    <span class="text-muted text-decoration-line-through">$20.00</span>-->
+<!--                                    $18.00-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            &lt;!&ndash; Product actions&ndash;&gt;-->
+<!--                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">-->
+<!--                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </div>
+
+            <!-- 페이징 -->
+            <div th:if="${!list.isEmpty()}">
+                <!-- 전역 변수 선언 -->
+                <nav
+                        th:with="pageNumber = ${list.pageable.pageNumber}, pageSize = ${list.pageable.pageSize},totalPages = ${list.totalPages},startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},tempEndPage = ${startPage + pageSize - 1},endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
+                        aria-label="Page navigation"
+                >
+                    <ul class="pagination">
+                        <!-- 처음으로 이동 -->
+                        <li th:classappend="${pageNumber < pageSize} ? 'disabled'" class="page-item">
+                            <a class="page-link" th:href="@{/page2(page=0)}">
+                                <span>&laquo;</span>
+                                <span class="sr-only">First</span>
+                            </a>
+                        </li>
+
+                        <!-- 이전으로 이동 -->
+                        <li th:classappend="${list.first} ? 'disabled'" class="page-item">
+                            <a class="page-link" th:href="${list.first} ? '#' : @{/page2(page=${pageNumber - 1})}" aria-label="Previous">
+                                <span aria-hidden="true">&lt;</span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                        </li>
+
+                        <!-- 특정 페이지로 이동 -->
+                        <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
+                            <a th:text="${page}" class="page-link" th:href="@{/page2(page=${page - 1})}"></a>
+                        </li>
+
+                        <!-- 다음으로 이동 -->
+                        <li th:classappend="${list.last} ? 'disabled'" class="page-item">
+                            <a class="page-link" th:href="${list.last} ? '#' : @{/page2(page=${pageNumber + 1})}" aria-label="Next">
+                                <span aria-hidden="true">&gt;</span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </li>
+
+                        <!-- 마지막으로 이동 -->
+                        <li th:classappend=" ${T(java.lang.Math).floor(totalPages / pageSize) * pageSize - 1 <= startPage} ? 'disabled'" class="page-item">
+                            <a class="page-link" th:href="@{/page2(page=${totalPages - 1})}">
+                                <span>&raquo;</span>
+                                <span class="sr-only">Last</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div> <!-- /페이징 -->
+
+
+
+
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
