--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -7,11 +7,11 @@
         <meta name="author" content="" />
         <title>Shop Homepage - Start Bootstrap Template</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="/css/styles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
@@ -120,7 +120,7 @@
                     <ul class="pagination">
                         <!-- 처음으로 이동 -->
                         <li th:classappend="${pageNumber < pageSize} ? 'disabled'" class="page-item">
-                            <a class="page-link" th:href="@{/page2(page=0)}">
+                            <a class="page-link" th:href="@{/post/board(page=0)}">
                                 <span>&laquo;</span>
                                 <span class="sr-only">First</span>
                             </a>
@@ -128,7 +128,7 @@
 
                         <!-- 이전으로 이동 -->
                         <li th:classappend="${list.first} ? 'disabled'" class="page-item">
-                            <a class="page-link" th:href="${list.first} ? '#' : @{/page2(page=${pageNumber - 1})}" aria-label="Previous">
+                            <a class="page-link" th:href="${list.first} ? '#' : @{/post/board(page=${pageNumber - 1})}" aria-label="Previous">
                                 <span aria-hidden="true">&lt;</span>
                                 <span class="sr-only">Previous</span>
                             </a>
@@ -136,12 +136,12 @@
 
                         <!-- 특정 페이지로 이동 -->
                         <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
-                            <a th:text="${page}" class="page-link" th:href="@{/page2(page=${page - 1})}"></a>
+                            <a th:text="${page}" class="page-link" th:href="@{/post/board(page=${page - 1})}"></a>
                         </li>
 
                         <!-- 다음으로 이동 -->
                         <li th:classappend="${list.last} ? 'disabled'" class="page-item">
-                            <a class="page-link" th:href="${list.last} ? '#' : @{/page2(page=${pageNumber + 1})}" aria-label="Next">
+                            <a class="page-link" th:href="${list.last} ? '#' : @{/post/board(page=${pageNumber + 1})}" aria-label="Next">
                                 <span aria-hidden="true">&gt;</span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -149,7 +149,7 @@
 
                         <!-- 마지막으로 이동 -->
                         <li th:classappend=" ${T(java.lang.Math).floor(totalPages / pageSize) * pageSize - 1 <= startPage} ? 'disabled'" class="page-item">
-                            <a class="page-link" th:href="@{/page2(page=${totalPages - 1})}">
+                            <a class="page-link" th:href="@{/post/board(page=${totalPages - 1})}">
                                 <span>&raquo;</span>
                                 <span class="sr-only">Last</span>
                             </a>
@@ -169,6 +169,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/js/scripts.js"></script>
     </body>
 </html>
