--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -53,11 +53,11 @@
             </div>
         </header>
         <!-- Section-->
-        <a th:href="@{/uploadPage}">글쓰기</a>
+        <a th:href="@{/post/uploadPage}">글쓰기</a>
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <div class="col mb-5" th:each = "postList:${postList}">
+                    <div class="col mb-5" th:each = "postList:${list}">
                         <div class="card h-100">
                             <!-- 제품사진-->
                             <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
