--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -10,7 +10,7 @@
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="/css/styles.css" rel="stylesheet" />
     </head>
     <th:block layout:fragment="head" />
 
@@ -31,7 +31,42 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/js/scripts.js"></script>
+        <!--ajax-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <!--sockJS-->
+        <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+        <!--STOMP-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+        <script th:inline="javascript">
+            /*웹소켓 연결 소스*/
+            if ([[${session.loginMember}]]["memId"] != null) {
+                function connect() {
+                    //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
+                    var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
+                    //do Handshake
+                    stompClient = Stomp.over(socket);
+
+                    // connect(header,연결 성공시 콜백,에러발생시 콜백)
+                    stompClient.connect({}, function () {
+                            //subscribe(subscribe url,해당 url로 메시지를 받을때마다 실행할 함수)
+                            sub = stompClient.subscribe('/topic/'+[[${session.loginMember}]]["memId"], function (e) {
+                                //e.body에 전송된 data가 들어있다
+                                console.log("알림메세지를 수신하였습니다.");
+                                $('#chat').text(Number($('#chat').text())+1);
+                                // showMessage(JSON.parse(e.body));
+                            });
+                        },
+                        function(e){
+                            //에러 콜백
+                            alert('에러발생!!!!!!');
+                        }
+                    );
+                }
+
+                connect();
+            }
+        </script>
         <th:block layout:fragment="script"> </th:block>
     </body>
 </html>
