--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -57,8 +57,8 @@
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <div class="col mb-5" th:each = "postList:${list}">
-                        <div class="card h-100">
+                    <div class="col mb-5" th:each = "postList:${list}" >
+                        <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${postList.postId}|}'|">
                             <!-- 제품사진-->
                             <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
                             <!-- Product details-->
