--- a/src/main/resources/templates/member/signupForm.html
+++ b/src/main/resources/templates/member/signupForm.html
@@ -6,7 +6,7 @@
 <head layout:fragment="head">
     <title>회원가입 폼</title>
     <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+          href="/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .form-container {
             max-width: 560px;
@@ -87,8 +87,7 @@
             </div>
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg"
-                        id=""
-                        type="button"> 회원 가입 </button>
+                        type="submit"> 회원 가입 </button>
             </div>
         </div>
     </form>
