--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -6,7 +6,7 @@
 <head layout:fragment="head">
   <meta charset="utf-8">
   <link th:href="@{/css/bootstrap.min.css}"
-        href="../css/bootstrap.min.css" rel="stylesheet">
+        href="/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .form-container {
       max-width: 560px;
