--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -60,7 +60,7 @@
                     <div class="col mb-5" th:each = "postList:${list}" >
                         <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${postList.postId}|}'|">
                             <!-- 제품사진-->
-                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <img class="card-img-top" th:src="${}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
