--- a/src/main/resources/templates/memberHome.html
+++ b/src/main/resources/templates/memberHome.html
@@ -4,29 +4,26 @@
       layout:decorate="~{layout/basic.html}">
 <head layout:fragment="head">
     <title>홈 화면</title>
-    <style>
-        .profile_img{
-            width: 152px;
-            height: 152px;
-            overflow:hidden;
-            border-radius: 50%;
-            margin: 0 auto;
-        }
-        .profile_img img{
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <link href="/css/profile.css" rel="stylesheet" />
 </head>
 
 <div layout:fragment="content">
     <div class="profile_img">
         <img th:src="|/members/${member.memId}/profileImg|" alt="프로필이미지">
     </div>
+    <form th:action="|/members/${member.memId}/block|" th:method="post">
+        <button th:if="${session.loginMember.memId != member.memId && !blockState}" type="submit">
+          차단하기</button>
+    </form>
+    <form th:action="|/members/${member.memId}/cancelBlock|" th:method="post">
+        <input type="hidden" name="loginMemId" th:value="${session.loginMember.memId}">
+        <button th:if="${blockState}" type="submit">
+            차단해제</button>
+    </form>
+
     <h3 th:text="|${member.memId}님|"></h3>
     <p th:text="|${member.memId}님의 매너온도 : ${member.mannerScore}|"></p>
 </div>
 
 <script layout:fragment="script" th:inline="javascript">
-
 </script>
