session.setAttribute 수정
session.setAttribute는
Member -> MemberDto로 수정

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -51,12 +51,12 @@
                     <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /></div>
                     <div class="col-md-6">
                        <!--프로필-->
-                       <!-- <p>[[${post.member.nickname}]]</p>
+                       <!--/* <p>[[${post.member.nickname}]]</p>
                         <div class="profile_img">
                             <a th:href="@{/members/{memId}(memId=${post.member.memId})}">
                              <img th:src="|/members/${post.member.memId}/profileImg|" alt="프로필이미지"/>
                             </a>
-                        </div>-->
+                        </div> */-->
                         <!--카테고리-->
                         <div class="small mb-1" th:text="${post.category.getCategory()}">SKU: BST-498</div>
                         <!--제목-->
