--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -72,6 +72,7 @@
                                 <i class="bi-cart-fill me-1"></i>
                                 Add to cart
                             </button>
+                            <button class="btn btn-outline-dark flex-shrink-0" type="button" th:onclick="|location.href='@{/chat/{postId}(postId=${postId})}'|">채팅하기</button>
                         </div>
                     </div>
                 </div>
