--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -37,7 +37,7 @@
                         th:onclick="|location.href='@{/members/{memId}/edit(memId=${session.loginMember.memId})}'|"> 회원정보 </button>
                 </form>
                 <button class="btn btn-outline-dark" type="button"
-                        th:onclick="|location.href='@{/chatRoomList}'|"> 알림 <span id="chat">0</span>
+                        th:onclick="|location.href='@{/chat/chatRoomList}'|"> 채팅 <span id="chat">0</span>
                 </button>
         </div>
     </div>
