--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -9,6 +9,8 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!--chat.css는 수정이 필요할듯 2023.03.28 남호용-->
+        <link href="/css/chat.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/css/styles.css" rel="stylesheet" />
     </head>
@@ -39,8 +41,19 @@
         <!--STOMP-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
         <script th:inline="javascript">
-            /*웹소켓 연결 소스*/
+            /*로그인 한 경우 동작*/
             if ([[${session.loginMember}]]["memId"] != null) {
+                /*미확인 메세지 조회*/
+                $.ajax({
+                    type: "POST",
+                    url: "/chat/getChatNoti",
+                    success: function (result) {
+                        console.log('미확인 메세지 조회 완료! >>> ' + result);
+                        $('#chat').text(result);
+                    },
+                })
+
+                /*웹소켓 연결 소스*/
                 function connect() {
                     //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
                     var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
@@ -50,7 +63,7 @@
                     // connect(header,연결 성공시 콜백,에러발생시 콜백)
                     stompClient.connect({}, function () {
                             //subscribe(subscribe url,해당 url로 메시지를 받을때마다 실행할 함수)
-                            sub = stompClient.subscribe('/topic/'+[[${session.loginMember}]]["memId"], function (e) {
+                            sub = stompClient.subscribe('/topic/chat/'+[[${session.loginMember}]]["memId"], function (e) {
                                 //e.body에 전송된 data가 들어있다
                                 console.log("알림메세지를 수신하였습니다.");
                                 $('#chat').text(Number($('#chat').text())+1);
