--- a/src/main/resources/templates/upload_page.html
+++ b/src/main/resources/templates/upload_page.html
@@ -25,9 +25,9 @@
             <div class="form-group form-picture">
                 <div class="file-box">
                     <!--사진-->
-                    <input class="upload-name"  value="파일선택" disabled="disabled">
-                    <label for="ex_filename" class="btn btn-secondary">업로드</label>
-                    <input type="file" multiple="multiple" name="uploadFiles" id="ex_filename" style="display:none;">
+<!--                    <input class="upload-name"  value="파일선택" disabled="disabled">-->
+<!--                    <label for="ex_filename" class="btn btn-secondary">업로드</label>-->
+                    <input type="file" multiple="multiple" name="uploadFiles">
                 </div>
 
                 <div class="uploadResult"></div>
