--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -58,9 +58,9 @@
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5" th:each = "post:${list}" 0>
-                        <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|">
+                        <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
                             <!-- 제품사진-->
-                            <img class="card-img-top" th:src="|/post/imgs/${post.postId}|" th:onError="this.src='https://dummyimage.com/450x300/dee2e6/6c757d.jpg';" alt="제품사진" />
+                            <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" th:onError="this.src='https://dummyimage.com/450x300/dee2e6/6c757d.jpg';" alt="제품사진" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -68,7 +68,7 @@
                                     <h5 class="fw-bolder" th:text="${post.title}">제목</h5>
                                     <p class="fw">지역 / 1시간 전</p>
                                     <!-- 가격-->
-                                    <h6 class="fw-bolder" th:text="${post.price}">가격</h6>
+                                    <h6 class="fw-bolder" th:text="|${post.price}원|">가격</h6>
                                 </div>
                             </div>
                             <!-- Product actions-->
