--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -72,7 +72,7 @@
                     <div class="col-md-6">
                        <!--프로필-->
                         <p>[[${post.member.nickname}]]</p>
-                        <div class="profile_img">
+                        <div class="profile-img">
                             <a th:href="@{/members/{memId}(memId=${post.member.memId})}">
                              <img th:src="|/members/${post.member.memId}/profileImg|" alt="프로필이미지"/>
                             </a>
