--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,11 +1,11 @@
-.profile_img{
-    width: 152px;
-    height: 152px;
-    overflow:hidden;
+.profile-img{
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
     border-radius: 50%;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
 }
-.profile_img img{
+.profile-img img{
     width: 100%;
     height: 100%;
 }
