--- a/src/main/resources/templates/update_post.html
+++ b/src/main/resources/templates/update_post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>상품 등록</title>
+    <title>상품 수정</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <!--    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
 <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css" integrity="sha256-G3IAYJYIQvZgPksNQDbjvxd/Ca1SfCDFwu2s2lt0oGo=" crossorigin="anonymous" />-->
@@ -19,14 +19,13 @@
 <!--    </nav>-->
 
     <div class="container container-sm container-item-create">
-        <h5 class="container-headline">중고거래 글쓰기</h5>
+        <h5 class="container-headline">게시글 수정</h5>
 
         <form id="upload_form" class="form-item-create">
             <div class="form-group form-picture">
                 <div class="file-box">
                     <!--사진-->
-<!--                    <input class="upload-name"  value="파일선택" disabled="disabled">-->
-<!--                    <label for="ex_filename" class="btn btn-secondary">업로드</label>-->
+
                     <input type="file" multiple="multiple" name="uploadFiles">
                 </div>
 
@@ -36,25 +35,24 @@
             </div>
 
             <div class="form-group form-title">
-                <input type="text" class="form-control" id="productsTitle" name="title" placeholder="제목">
+                <input type="text" class="form-control" id="productsTitle" name="title" placeholder="제목" th:value="${post.title}">
             </div>
             <div class="form-group form-category">
                 <select id="productsCategory" class="form-control" name="category">
-                    <option value="" disabled selected>카테고리를 선택해주세요.</option>
-                    <!--thymeleaf이용해 Enum클래스 정보 바로 가져오기-->
-                    <option th:each = "categoryList:${T(com.exercise.carrotproject.domain.enumList.Category).values()}" th:value="${categoryList.name}" th:text="${categoryList.category}"></option>
+                    <!--카테고리-->
+                    <option th:each = "categoryList:${T(com.exercise.carrotproject.domain.enumList.Category).values()}" th:selected="${categoryList}==${post.category}" th:value="${categoryList.name}" th:text="${categoryList.category}"></option>
 
                 </select>
             </div>
             <div class="form-group form-price">
-                <input type="number" class="form-control" id="productsPrice" name="price" min="0" step="1000" placeholder="가격을 입력해주세요. (￦)">
+                <input type="number" class="form-control" id="productsPrice" name="price" min="0" step="1000" th:value="${post.price}">
             </div>
             <div class="form-group form-description">
-                <textarea class="form-control" id="productsDescription" name="content" rows="10" placeholder="제품 설명을 작성해주세요."></textarea>
+                <textarea class="form-control" id="productsDescription" name="content" rows="10" th:utext="${post.content}"></textarea>
             </div>
 
             <div class="form-group form-car-mileage">
-                <input type="text" class="form-control" id="carMileage" name="wishPlace" placeholder="거래희망장소">
+                <input type="text" class="form-control" id="carMileage" name="wishPlace" th:value="${post.wishPlace}">
             </div>
 <!--            <div class="form-group form-car-smoking">-->
 <!--                <label>차량 판매자 흡연 여부</label>-->
@@ -102,7 +100,7 @@
             //upload ajax
             //파일업로드를 위해 contentType 속성을 반드시 false로 지정한다 -> multipart/form-data 타입을 사용하기위해
             $.ajax({
-                url: '/post/upload',
+                url: '',
                 type: 'POST',
                 data: formData,
                 processData: false, //processData : false로 선언 시 formData를 string으로 변환하지 않음
